5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_2703.log
== TEST (2019-04-11 10:42:20) 
-- CODE:
idade = int(input(" num: "))

if (idade>=18):
	print(eleitor)

else:
	 print(nao_eleitor)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:43:08) 
-- CODE:
idade = int(input(" num: "))

if (idade>=18):
	print(eleitor)

else:
	 print("nao_eleitor")
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:43:16) 
-- CODE:
idade = int(input(" num: "))

if (idade>=18):
	print("eleitor")

else:
	 print("nao_eleitor")
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:43:22) 
-- CODE:
idade = int(input(" num: "))

if (idade>=18):
	print("eleitor")

else:
	 print("nao_eleitor")
	
-- EXECUTION TIME:
0.250912
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
